fix(web-ui): btn is too big

--- a/packages/web-ui/src/Button.module.css
+++ b/packages/web-ui/src/Button.module.css
@@ -1,6 +1,7 @@
 .button {
   display: block;
-  width: 600px;
+  width: 100%;
+  max-width: 600px;
   height: 50px;
   font-size: 30px;
   margin-top: 20px;
